kubernetes/platform/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sitepilot-platform
  labels:
    app.kubernetes.io/managed-by: sitepilot
